--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=domestic-task-api
-spring.datasource.url=jdbc:mysql://localhost:3306/domestic_task?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Rootoorn
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 server.servlet.context-path=/api
@@ -9,10 +9,10 @@ spring.main.allow-circular-references=true
 
 
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=collectverythings@gmail.com
-spring.mail.password=rsmd hajs ncfd hjyx
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
