--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,30 @@
+# ============================================
+# ? Application
+# ============================================
+
 spring.application.name=slavery-home-challenge-api
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/api
 spring.main.allow-circular-references=true
 
+
+# ============================================
+# ?? Base de données (MySQL)
+# ============================================
+
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/slavery-home-challenge-api?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
+# ============================================
+# ? Email / SMTP (Spring Mail)
+# ============================================
 
 spring.mail.default-encoding=UTF-8
 spring.mail.host=${MAIL_HOST}
@@ -16,4 +34,3 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
