--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }} # ou key si tu utilises une clé
+          password: ${{ secrets.SSH_PASSWORD }}
           source: "deploy/docker-compose.prod.yml"
           target: "/srv/slavery-home-challenge-api"
           overwrite: true
@@ -96,11 +96,22 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             set -e
-  
+      
             cd /srv/slavery-home-challenge-api
-  
+      
+            echo "Current directory:"
+            pwd
+      
+            echo "Docker version:"
+            docker --version || echo "docker not found"
+      
+            echo "Docker Compose version:"
+            docker compose version || echo "docker compose not found"
+      
             echo "Pulling latest images..."
-            docker compose pull
-  
+            docker compose -f docker-compose.prod.yml pull
+      
             echo "Restarting containers..."
-            docker compose up -d --remove-orphans
+            docker compose -f docker-compose.prod.yml up -d --remove-orphans
+      
+            echo "Done ✅"
