:wrench: Trig unit test on PR trigger

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,13 @@ on:
       - 'documentation/**'
       - 'README.md'
 
+  pull_request:
+    branches:
+      - dev
+    paths-ignore:
+      - 'documentation/**'
+      - 'README.md'
+
 jobs:
   # ==========================
   # 🧪 Tests sur la branche dev
